--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,13 @@
     <string name="pref_title_iat_show">显示听写界面</string>
 
     <string name="pref_key_translate">translate</string>
+    
+    <string name="my_service_order">服务订单</string>
+    <string name="my_shop_order">商品订单</string>
+    <string name="my_evaluate">我的评价</string>
+    <string name="my_station">申请为站住</string>
+    <string name="my_user_information">用户信息</string>
+    <string name="my_setting">通用设置</string>
+    <string name="my_about">关于我们</string>
+
 </resources>
